--- a/ActivityService/ActivityService.csproj
+++ b/ActivityService/ActivityService.csproj
@@ -6,12 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="wwwroot\"/>
+        <Folder Include="wwwroot\" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6"/>
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
+        <PackageReference Include="EasyNetQ" Version="3.3.5" />
+        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+        <PackageReference Include="NSwag.AspNetCore" Version="11.20.1" />
     </ItemGroup>
 
 </Project>
