--- a/ActivityService/ActivityService.csproj
+++ b/ActivityService/ActivityService.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
         <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
+        <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.5.0" />
         <PackageReference Include="NSwag.AspNetCore" Version="12.0.0" />
     </ItemGroup>
 
