--- a/ActivityService/ActivityService.csproj
+++ b/ActivityService/ActivityService.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-        <RuntimeFrameworkVersion>2.1.6</RuntimeFrameworkVersion>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+        <!--<RuntimeFrameworkVersion>2.1.6</RuntimeFrameworkVersion>-->
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,11 +12,11 @@
 
     <ItemGroup>
         <PackageReference Include="EasyNetQ" Version="3.3.5" />
-        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
         <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
-        <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.5.0" />
-        <PackageReference Include="NSwag.AspNetCore" Version="12.0.0" />
+        <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.6.0" />
+        <PackageReference Include="NSwag.AspNetCore" Version="12.0.4" />
     </ItemGroup>
 
 </Project>
