--- a/ConceptTest/ConceptTest.csproj
+++ b/ConceptTest/ConceptTest.csproj
@@ -4,9 +4,11 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <!--<RuntimeFrameworkVersion>2.1.6</RuntimeFrameworkVersion>-->
         <IsPackable>false</IsPackable>
+        <LangVersion>7.3</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
