Added configuration, logging and docker support

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -1,8 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "ActivityService"
     }
   },
-  "AllowedHosts": "*"
+  "MongoDB": {
+    "hosts": "localhost:27017",
+    "database": "activities"
+  }
 }
