--- a/ActivityService/ActivityService.csproj
+++ b/ActivityService/ActivityService.csproj
@@ -16,6 +16,10 @@
         <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
         <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.6.0" />
         <PackageReference Include="NSwag.AspNetCore" Version="12.0.4" />
+        <PackageReference Include="Serilog" Version="2.7.1" />
+        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     </ItemGroup>
 
 </Project>
