add mongo collections mapping to configuration

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -19,6 +19,14 @@
   },
   "MongoDB": {
     "hosts": "localhost:27017",
-    "database": "activityServiceDB"
+    "database": "activityServiceDB",
+    "entityMapper": {
+      "collection": [
+        {
+          "fullTypeName": "ActivityService.Models.UserActivity",
+          "collectionName": "activities"
+        }
+      ]
+    }
   }
 }
