complete the scheleton of UserActivityService

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -25,6 +25,10 @@
         {
           "fullTypeName": "ActivityService.Models.UserActivity",
           "collectionName": "activities"
+        },
+        {
+          "fullTypeName": "ActivityService.Models.SimpleUser",
+          "collectionName": "users"
         }
       ]
     }
