add index for simple user

--- a/ConceptTest/appsettings.json
+++ b/ConceptTest/appsettings.json
@@ -7,7 +7,11 @@
         {
           "fullTypeName": "ActivityService.Models.UserActivity",
           "collectionName": "activities"
-        }  
+        },
+        {
+          "fullTypeName": "ActivityService.Models.SimpleUser",
+          "collectionName": "users"
+        }
       ]
     }
   }
