fix for appending callback model dynamically

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,23 +18,23 @@
     }
   },
   "MongoDB": {
-    "hosts": "localhost:27017",
-    "database": "activityServiceDB",
-    "entityMapper": {
-      "collection": [
-        {
-          "fullTypeName": "ActivityService.Models.UserActivity",
-          "collectionName": "activities"
-        },
-        {
-          "fullTypeName": "ActivityService.Models.SimpleUser",
-          "collectionName": "users"
-        }
-      ]
-    }
+    "Hosts": "localhost:27017",
+    "Database": "activityServiceDB"
+  },
+  "MongoEntity": {
+    "Mappers": [
+      {
+        "FullTypeName": "ActivityService.Models.UserActivity",
+        "CollectionName": "activities"
+      },
+      {
+        "FullTypeName": "ActivityService.Models.SimpleUser",
+        "CollectionName": "users"
+      }  
+    ]
   },
   "ExportModule": {
-    "host": "http://localhost:5000",
-    "service": "api/vi"
+    "Host": "http://localhost:5000",
+    "EndPoint": "api/vi"
   }
 }
