setup the endpoint of export api

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -34,7 +34,7 @@
     ]
   },
   "ExportModule": {
-    "Host": "http://localhost:5000",
-    "EndPoint": "api/vi"
+    "Host": "http://qa-capi.hle.com.tw/test-export",
+    "EndPoint": "tests"
   }
 }
