--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo:27017",
+    "Hosts": "mongo.qa.local:27017",
     "Database": "activityServiceDB"
   },
   "MongoEntity": {
