change the protocol of export api to https

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -34,7 +34,7 @@
     ]
   },
   "ExportModule": {
-    "Host": "http://qa-capi.hle.com.tw/test-export",
+    "Host": "https://qa-capi.hle.com.tw/test-export",
     "EndPoint": "tests"
   }
 }
