--- a/ConceptTest/ConceptTest.csproj
+++ b/ConceptTest/ConceptTest.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <IsPackable>false</IsPackable>
         <LangVersion>7.3</LangVersion>
+        <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     </PropertyGroup>
 
     <ItemGroup>
