--- a/activity-compose.yml
+++ b/activity-compose.yml
@@ -2,8 +2,14 @@ version: '3.4'
 
 services:
   activity:
-    image: 'activity-api:1.0.0'
+    build: .
+    image: 'activity-api:${TAG}'
     ports:
-      - 5000:5000
+      - 5000:80
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+      
+networks:
+  default:
+    external:
+      name: local_bridge
