--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -19,7 +19,7 @@
   },
   "MongoDB": {
     "Hosts": "localhost:27017",
-    "Database": "testbank"
+    "Database": "activityServiceDB"
   },
   "MongoEntity": {
     "Mappers": [
