add hibernation model, repository and service, working on controller

--- a/ConceptTest/appsettings.json
+++ b/ConceptTest/appsettings.json
@@ -12,6 +12,10 @@
       {
         "FullTypeName": "ActivityService.Models.SimpleUser",
         "CollectionName": "users"
+      },
+      {
+        "FullTypeName": "ActivityService.Models.Hibernation",
+        "CollectionName": "hibernation"
       }
     ]
   }
