--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,8 +18,8 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.qa.local:27017",
-    "Database": "testbank"
+    "Hosts": "localhost:27017",
+    "Database": "activityServiceDB"
   },
   "MongoEntity": {
     "Mappers": [
@@ -30,7 +30,11 @@
       {
         "FullTypeName": "ActivityService.Models.SimpleUser",
         "CollectionName": "users"
-      }  
+      },
+      {
+        "FullTypeName": "ActivityService.Models.Hibernation",
+        "CollectionName": "hibernation"
+      }
     ]
   },
   "ExportModule": {
