re-structure hibernation and activity api to fix front-end senerio

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -25,15 +25,15 @@
     "Mappers": [
       {
         "FullTypeName": "ActivityService.Models.UserActivity",
-        "CollectionName": "activities"
+        "CollectionName": "v2-activities"
       },
       {
         "FullTypeName": "ActivityService.Models.SimpleUser",
-        "CollectionName": "users"
+        "CollectionName": "v2-users"
       },
       {
         "FullTypeName": "ActivityService.Models.Hibernation",
-        "CollectionName": "hibernation"
+        "CollectionName": "v2-hibernation"
       }
     ]
   },
