--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -34,6 +34,10 @@
       {
         "FullTypeName": "ActivityService.Models.Hibernation",
         "CollectionName": "v2-hibernation"
+      },
+      {
+        "FullTypeName": "ActivityService.Models.QuestionPattern",
+        "CollectionName": "v2-patterns"
       }
     ]
   },
