add patch history for hibernation

--- a/ConceptTest/appsettings.json
+++ b/ConceptTest/appsettings.json
@@ -19,7 +19,7 @@
       },
       {
         "FullTypeName": "ActivityService.Models.QuestionPattern",
-        "CollectionName": "v2-patterns"
+        "CollectionName": "patterns"
       }
     ]
   }
