--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,8 +18,8 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.qa.local:27017",
-    "Database": "activityServiceDB"
+    "Hosts": "172.30.0.137:27017",
+    "Database": "testbank"
   },
   "MongoEntity": {
     "Mappers": [
