--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -19,7 +19,7 @@
   },
   "MongoDB": {
     "Hosts": "172.30.0.137:27017",
-    "Database": "testbank"
+    "Database": "testbank-1"
   },
   "MongoEntity": {
     "Mappers": [
