--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,31 +18,31 @@
     }
   },
   "MongoDB": {
-    "Hosts": "localhost:27017",
+    "Hosts": "172.30.128.16:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
     "Mappers": [
       {
         "FullTypeName": "ActivityService.Models.UserActivity",
-        "CollectionName": "v2-activities"
+        "CollectionName": "v3-activities"
       },
       {
         "FullTypeName": "ActivityService.Models.SimpleUser",
-        "CollectionName": "v2-users"
+        "CollectionName": "v3-users"
       },
       {
         "FullTypeName": "ActivityService.Models.Hibernation",
-        "CollectionName": "v2-hibernation"
+        "CollectionName": "v3-hibernation"
       },
       {
         "FullTypeName": "ActivityService.Models.QuestionPattern",
-        "CollectionName": "v2-patterns"
+        "CollectionName": "v3-patterns"
       }
     ]
   },
   "ExportModule": {
-    "Host": "https://qa-capi.hle.com.tw/test-export",
+    "Host": "https://capi.hle.com.tw/test-export",
     "EndPoint": "tests"
   }
 }
