--- a/ActivityService/ActivityService.csproj
+++ b/ActivityService/ActivityService.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.8.1" />
         <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.6.0" />
         <PackageReference Include="NSwag.AspNetCore" Version="13.0.4" />
