change returning value of subject controller to list of EducationLevel

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -44,5 +44,9 @@
   "ExportModule": {
     "Host": "https://capi.hle.com.tw/test-export",
     "EndPoint": "tests"
+  },
+  "JsonLocation": {
+    "SubjectUri": "https://testbank-data.hle.com.tw/json/h.subjects.json",
+    "VersionUri": "https://testbank-data.hle.com.tw/json/versions.json"
   }
 }
