add test go subject model

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -47,6 +47,7 @@
   },
   "JsonLocation": {
     "SubjectUri": "https://testbank-data.hle.com.tw/json/h.subjects.json",
-    "VersionUri": "https://testbank-data.hle.com.tw/json/versions.json"
+    "VersionUri": "https://testbank-data.hle.com.tw/json/versions.json",
+    "TestGoUri": "https://www.tbbt.com.tw/testGoPermission/api/v1/UserPermission"
   }
 }
