--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -42,7 +42,7 @@
     ]
   },
   "ExportModule": {
-    "Host": "https://capi.hle.com.tw/test-export",
+    "Host": "https://qa-capi.local/test-export",
     "EndPoint": "tests"
   },
   "JsonLocation": {
