--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -48,6 +48,6 @@
   "JsonLocation": {
     "EduSubjectUri": "https://testbank-data.hle.com.tw/json/h.subjects.json",
     "SubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
-    "TestGoUri": "https://www.tbbt.com.tw/testGoPermission/api/v1/UserPermission"
+    "TestGoUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission"
   }
 }
