--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -47,7 +47,7 @@
   },
   "JsonLocation": {
     "EduSubjectUri": "https://testbank-data.hle.com.tw/json/h.subjects.json",
-    "SubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
+    "SubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
     "TestGoUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission"
   }
 }
