--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.testbank-prod.local:27017",
+    "Hosts": "172.30.128.16:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
