change collection to version 4

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,26 +18,26 @@
     }
   },
   "MongoDB": {
-    "Hosts": "172.30.128.16:27017",
+    "Hosts": "mongo.testbank-prod.local:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
     "Mappers": [
       {
         "FullTypeName": "ActivityService.Models.UserActivity",
-        "CollectionName": "v3-activities"
+        "CollectionName": "v4-activities"
       },
       {
         "FullTypeName": "ActivityService.Models.SimpleUser",
-        "CollectionName": "v3-users"
+        "CollectionName": "v4-users"
       },
       {
         "FullTypeName": "ActivityService.Models.Hibernation",
-        "CollectionName": "v3-hibernation"
+        "CollectionName": "vr-hibernation"
       },
       {
         "FullTypeName": "ActivityService.Models.QuestionPattern",
-        "CollectionName": "v3-patterns"
+        "CollectionName": "v4-patterns"
       }
     ]
   },
