fix collection version

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -33,7 +33,7 @@
       },
       {
         "FullTypeName": "ActivityService.Models.Hibernation",
-        "CollectionName": "vr-hibernation"
+        "CollectionName": "v4-hibernation"
       },
       {
         "FullTypeName": "ActivityService.Models.QuestionPattern",
