restore export api to use domain name [ch4056]

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -42,7 +42,7 @@
     ]
   },
   "ExportModule": {
-    "Host": "http://172.30.0.118/test-export",
+    "Host": "http://capi.local/test-export",
     "EndPoint": "tests"
   },
   "JsonLocation": {
