--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.testbank-prod.local:27017",
+    "Hosts": "mongo.qa.local:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
@@ -42,7 +42,7 @@
     ]
   },
   "ExportModule": {
-    "Host": "http://172.30.0.118/test-export",
+    "Host": "https://qa-capi.local/test-export",
     "EndPoint": "tests"
   },
   "JsonLocation": {
