add nameof keywords to prevent typos for cors' scope

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.testbank-prod.local:27017",
+    "Hosts": "localhost:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
@@ -42,12 +42,12 @@
     ]
   },
   "ExportModule": {
-    "Host": "http://capi.local/test-export",
+    "Host": "http://qa-capi.local/test-export",
     "EndPoint": "tests"
   },
   "JsonLocation": {
-    "EduSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json/h.subjects.json",
-    "SubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
+    "EduSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json/h.subjects.json",
+    "SubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
     "TestGoUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission"
   }
 }
