--- a/ActivityService/appsettings-prod.json
+++ b/ActivityService/appsettings-prod.json
@@ -48,6 +48,12 @@
   "JsonLocation": {
     "EduSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json/h.subjects.json",
     "SubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
-    "TestGoUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission"
+    "TestGoUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission",
+    "CacheName": {
+      "EducationLevel": "education-level",
+      "SubjectsLookup": "subjects-lookup",
+      "ProductsLookup": "products-lookup",
+      "VersionCacheName": "cache-version"
+    }
   }
 }
