--- a/ActivityService/appsettings-prod.json
+++ b/ActivityService/appsettings-prod.json
@@ -48,7 +48,7 @@
   "JsonLocation": {
     "EduSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json/h.subjects.json",
     "SubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json-testgo/h.subjects.json",
-    "TestGoUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission",
+    "TestGoSubjectUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission",
     "CacheName": {
       "EducationLevel": "education-level",
       "SubjectsLookup": "subjects-lookup",
