separate version into edu and testgo ones

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -24,7 +24,7 @@
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.qa.local:27017",
+    "Hosts": "localhost:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
@@ -56,12 +56,13 @@
     "EduSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json",
     "TestGoSubjectFilename": "h.subjects.json",
     "TestGoSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json-testgo",
-    "TestGoPermissibleUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission",
+    "TestGoPermissibleUri": "https://www.tbbt.com.tw/testGoPermission/api/v1/UserPermission",
     "CacheName": {
       "EducationLevel": "education-level",
       "SubjectsLookup": "subjects-lookup",
       "ProductsLookup": "products-lookup",
-      "VersionCacheName": "cache-version"
+      "EduVersionCacheName": "edu-cache-version",
+      "TestGoVersionCacheName": "testgo-cache-version"
     }
   }
 }
