--- a/ActivityService/appsettings-prod.json
+++ b/ActivityService/appsettings-prod.json
@@ -55,7 +55,8 @@
       "EducationLevel": "education-level",
       "SubjectsLookup": "subjects-lookup",
       "ProductsLookup": "products-lookup",
-      "VersionCacheName": "cache-version"
+      "EduVersionCacheName": "edu-cache-version",
+      "TestGoVersionCacheName": "testgo-cache-version"
     }
   }
 }
