--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -1,7 +1,9 @@
 {
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -10,15 +12,19 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" }
+      {
+        "Name": "Console"
+      }
     ],
-    "Enrich": [ "FromLogContext" ],
+    "Enrich": [
+      "FromLogContext"
+    ],
     "Properties": {
       "Application": "ActivityService"
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.testbank-prod.local:27017",
+    "Hosts": "localhost:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
@@ -42,15 +48,15 @@
     ]
   },
   "ExportModule": {
-    "Host": "http://capi.local/test-export",
+    "Host": "https://testbank-qa-831451682.ap-northeast-1.elb.amazonaws.com/test-export",
     "EndPoint": "tests"
   },
   "JsonLocation": {
-    "EduSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json",
     "EduSubjectFilename": "h.subjects.json",
-    "TestGoSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json-testgo",
+    "EduSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json",
     "TestGoSubjectFilename": "h.subjects.json",
-    "TestGoPermissibleUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission",
+    "TestGoSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json-testgo",
+    "TestGoPermissibleUri": "https://www.tbbt.com.tw/testGoPermission/api/v1/UserPermission",
     "CacheName": {
       "EducationLevel": "education-level",
       "SubjectsLookup": "subjects-lookup",
