--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -24,7 +24,7 @@
     }
   },
   "MongoDB": {
-    "Hosts": "localhost:27017",
+    "Hosts": "mongo.qa.local:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
