change to the settings for prod dev

--- a/ActivityService/appsettings.json
+++ b/ActivityService/appsettings.json
@@ -1,9 +1,7 @@
 {
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console"
-    ],
+    "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -12,19 +10,15 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      }
+      { "Name": "Console" }
     ],
-    "Enrich": [
-      "FromLogContext"
-    ],
+    "Enrich": [ "FromLogContext" ],
     "Properties": {
       "Application": "ActivityService"
     }
   },
   "MongoDB": {
-    "Hosts": "mongo.qa.local:27017",
+    "Hosts": "mongo.testbank-prod.local:27017",
     "Database": "testbank"
   },
   "MongoEntity": {
@@ -48,15 +42,15 @@
     ]
   },
   "ExportModule": {
-    "Host": "https://testbank-qa-831451682.ap-northeast-1.elb.amazonaws.com/test-export",
+    "Host": "http://capi.local/test-export",
     "EndPoint": "tests"
   },
   "JsonLocation": {
+    "EduSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json",
     "EduSubjectFilename": "h.subjects.json",
-    "EduSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json",
+    "TestGoSubjectUri": "https://hanlin-testbank.s3.ap-northeast-1.amazonaws.com/json-testgo",
     "TestGoSubjectFilename": "h.subjects.json",
-    "TestGoSubjectUri": "https://hanlin-testbank-qa.s3.ap-northeast-1.amazonaws.com/json-testgo",
-    "TestGoPermissibleUri": "https://www.tbbt.com.tw/testGoPermission/api/v1/UserPermission",
+    "TestGoPermissibleUri": "https://www.ehanlin.com.tw/testGoPermission/api/v1/UserPermission",
     "CacheName": {
       "EducationLevel": "education-level",
       "SubjectsLookup": "subjects-lookup",
